[tool.poetry]
name = "naive-bayes-language-classifier"
version = "0.1.0"
description = ""
authors = ["Ezequiel <eperez@itba.edu.ar>"]
readme = "README.md"
packages = [{include = "naive_bayes_language_classifier"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
pandas = "^2.1.2"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
